<resources>
    <string name="app_name">TechTalkAndroid</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastre">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sobre">GDG Jataí é um grupo independente, de profissionais, estudantes e professores da área de tecnologia da informação que se reúne nos primeiros sábados à tarde de cada mês a fim de discutir tecnologias e disseminar conhecimento.</string>
    <string name="eventos">Eventos</string>
    <string name="membros">Membros</string>
</resources>
