<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/twCadastre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:text="@string/cadastre"
            android:textSize="30sp"
            android:textColor="@color/preto"/>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/tfNome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/twCadastre"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:mtf_labelColor="#111">
            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text"
                android:textColor="@color/preto"
                android:textColorHint="@color/preto"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/tfEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfNome"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:mtf_labelColor="#111">
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/preto"
                android:textColorHint="@color/preto"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/tfSenha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfEmail"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:mtf_labelColor="#111">
            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/preto"
                android:textColorHint="@color/preto"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tfSenha"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/cadastrar"
            android:textColor="@color/branco"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

    </RelativeLayout>
</ScrollView>